<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2026, Raimondas Rimkus
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard_toolbar"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="?attr/keyboardBackgroundColor"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/toolbar_ai_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/ai_toolbar_button"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/sym_keyboard_ai" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/toolbar_resize_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/ai_toolbar_resize_button"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/sym_keyboard_resize" />

    <ImageButton
        android:id="@+id/toolbar_ai_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/ai_settings_button"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/sym_keyboard_settings" />

</LinearLayout>
